# ncnn-face-recognition

./: CMakeLists.txt  README.md  test.py
models/: feature.db
src/: api.cpp  facerecognition.cpp  facerecognition.h  featuredb.cpp  featuredb.h  main.cpp  mobilefacenet.cpp  mobilefacenet.h  mtcnn.cpp  mtcnn.h  tcpsender.cpp
